# fun-python

./: LICENSE  README.md  README.org
base-structure/: README.md
base-structure/tests/: test.py
bayes-patrol/: README.org  pyproject.toml
bayes-patrol/bayes_patrol/: __init__.py  game.py  search.py
